assets/scss/main.scss
@import '~assets/scss/variables.scss';

html, body, #__nuxt {
	width: 100%;
	height: 100%;
	font-family: 'Din';
	font-weight: normal;
	overflow-x: hidden;
}

ul {
	list-style-type: none;
	padding: 0;
	margin: 0;
}

h2 {
	font-family: 'Oswald';
	font-size: 10vw;
}

h3 {
	font-size: 1.4vw;
}

